--- a/src/webapp/WEB-INF/pages/addUser.html
+++ b/src/webapp/WEB-INF/pages/addUser.html
@@ -3,27 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <title>Add New User</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        form {
+            background-color: #f9f9f9;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 300px;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
+
+        input[type="text"], input[type="number"] {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 15px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        input[type="submit"], .btn {
+            padding: 10px 20px;
+            margin: 5px;
+            text-decoration: none;
+            color: white;
+            background-color: #007bff;
+            border-radius: 5px;
+            border: none;
+            cursor: pointer;
+        }
+
+        .btn-secondary {
+            background-color: #6c757d;
+        }
+
+        input[type="submit"]:hover, .btn:hover {
+            opacity: 0.8;
+        }
+    </style>
 </head>
 <body>
-<center>
-    <h2>Add New User</h2>
-    <form action="/spring_mvc_war_exploded/saveUser" method="post" th:object="${user}">
-        <label>Name: &nbsp;
-            <input type="text" th:field="*{name}" placeholder="Ivan" required>
-        </label>
-        <br><br>
-        <label>Age: &nbsp;
-            <input type="number" th:field="*{age}" placeholder="25" required>
-        </label>
-        <br><br>
-        <label>Salary: &nbsp;
-            <input type="number" th:field="*{salary}" placeholder="30000" required>
-        </label>
-        <br><br>
-        <input type="submit" value="Save User">
-    </form>
-    <br>
-    <input type="button" value="Back to Users" onclick="window.location.href = '/spring_mvc_war_exploded'"/>
-</center>
+<h2>Add New User</h2>
+<form action="/saveUser" method="post" th:object="${user}">
+    <label>Name:
+        <input type="text" th:field="*{name}" placeholder="Ivan" required>
+    </label>
+    <label>Age:
+        <input type="number" th:field="*{age}" placeholder="25" min="0" max="150" required>
+    </label>
+    <label>Salary:
+        <input type="number" th:field="*{salary}" placeholder="30000" min="0" required>
+    </label>
+    <input type="submit" value="Save User">
+</form>
+<br>
+<a href="/" class="btn btn-secondary">Back to Users</a>
 </body>
 </html>
