--- a/src/webapp/WEB-INF/pages/users.html
+++ b/src/webapp/WEB-INF/pages/users.html
@@ -3,24 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <title>Users</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        table {
+            border-collapse: collapse;
+            width: 50%;
+            margin: 20px 0;
+        }
+
+        th, td {
+            border: 1px solid black;
+            padding: 8px;
+            text-align: center;
+        }
+
+        th {
+            background-color: #f2f2f2;
+        }
+
+        .btn {
+            padding: 10px 20px;
+            margin: 5px;
+            text-decoration: none;
+            color: white;
+            background-color: #007bff;
+            border-radius: 5px;
+            border: none;
+            cursor: pointer;
+        }
+
+        .btn:hover {
+            opacity: 0.8;
+        }
+    </style>
 </head>
 <body>
-<center>
 <h2>Users list</h2>
-<table border="1">
+<table>
     <tr>
+        <th>Id</th>
         <th>Names</th>
         <th>Age</th>
         <th>Salary</th>
     </tr>
     <tr th:each="user : ${users}">
+        <td th:text="${user.id}"></td>
         <td th:text="${user.name}"></td>
         <td th:text="${user.age}"></td>
         <td th:text="${user.salary}"></td>
     </tr>
 </table>
-    <br><br>
-<input type="button" value="AddUser" onclick="window.location.href = 'addUser'"/>
-</center>
+<br>
+<div>
+    <a href="/addUser" class="btn">Add User</a>
+    <a href="/select" class="btn">Delete User</a>
+    <a href="/select" class="btn">Update User</a>
+</div>
 </body>
 </html>
